login realizado para administradores

--- a/gerente/templates/index.html
+++ b/gerente/templates/index.html
@@ -24,7 +24,7 @@
                     <img src="https://scontent.fbga2-1.fna.fbcdn.net/v/t39.30808-6/304792263_772134287091512_1749244208798072030_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeE-eGoxDuiuzlaL9zsEZf_RBhdabiIVzr8GF1puIhXOv3NQn06vKL7LejI0EPmma7htegYsrYPocnxDnxu05PAH&_nc_ohc=GK6FodzoZH0AX9qWx9t&_nc_ht=scontent.fbga2-1.fna&oh=00_AfD-W9vGSvxne6KUEiTh64HjjBd7iWD4wDB0Eg4aEezooQ&oe=63D93D6B" alt="" class="me-3" style="width: 80px;">
                   </div>
 
-                  <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Ingresa a tu cuenta</h5>
+                  <h1 class="h3 fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Ingresa a tu cuenta</h1>
 
                   {{form|crispy}}
 
