--- a/gerente/templates/inicio.html
+++ b/gerente/templates/inicio.html
@@ -3,5 +3,39 @@
 {% load static %}
 
 {% block body %}
-<h1>hola</h1>
+ <!-- Navbar -->
+ <nav class="navbar p-4 pe-5">
+    <div class="container-fluid">
+      <a class="navbar-brand color-primary font-size-1" href="#">
+        <img src="{% static 'images/13045f292f2a450687918591a7a1eb70 1.svg' %}" alt="Logo" width="47" height="36" class="d-inline-block align-text-top">
+        TravelEasy
+      </a>
+      <a class="color-primary text-decoration-none font-size-2" href="#">Andres Jaramillo</a>
+    </div>
+</nav>
+
+<div class="px-5 py-3">
+    <div class="row mb-5">
+        <div class="col-12 col-sm-7">
+            <h2 class="font-size-1">Bienvenido a TravelEasy</h2>
+        </div>
+        <div class="col-12 col-sm-5">
+            <input type="text" class="form-control" placeholder="Buscar...">
+        </div>
+    </div>
+
+    <div class="d-flex">
+        <div class="card">
+            <div class="card-header text-white px-4 py-3 bg-color-fourth font-size-1">
+              Evento: Conferencia de salud
+            </div>
+            <div class="card-body">
+              <p class="card-text">Ubicación: San diego.</p>
+              <p class="card-text">Fecha de inicio: 12 de mayo de 2022.</p>
+              <p class="card-text">Fecha Fin: 30 de mayo 2022.</p>
+              <a href="#" class="btn btn-primary">Ver más</a>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock body %}
