--- a/static/css/style.css
+++ b/static/css/style.css
@@ -88,3 +88,37 @@ body {
         padding: 90px 280px;
     }   
 }
+.navbar {
+    position: relative;
+    z-index: 1;
+  }
+  
+  #logout-popup {
+    display: none;
+    position: absolute;
+    top: calc(100% + -37px); 
+    left: 90%;
+    transform: translateX(-20%);
+    background: var(--color-cuaternario);
+    padding: 10px;
+    border-radius: 5px;
+    z-index: 9999;
+  }
+  
+  #logout-popup p {
+    margin: 0 0 10px;
+    color: #fff;
+  }
+  
+  #logout-popup button {
+    background: var(--color-secundario);
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 3px;
+    cursor: pointer;
+  }
+  
+  #logout-popup button:hover {
+    background: var(--color-primario)
+  }
