--- a/empleado/templates/layouts/inicio.html
+++ b/empleado/templates/layouts/inicio.html
@@ -18,15 +18,10 @@
   </div>
 </nav>
 <div class="px-5 py-3">
-    <div class="row mb-5">
-        <div class="col-12 col-sm-7">
-            <h2 class="font-size-1">Bienvenido a TravelEasy</h2>
-        </div>
-        <div class="col-12 col-sm-5">
-            <input type="text" class="form-control" placeholder="Buscar...">
-        </div>
-    </div>
     {% block content %} 
     {% endblock content %}        
 </div>
+<footer>
+  
+</footer>
 {% endblock body %}
