--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -16,6 +16,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="{% static 'js/animations.js' %}"></script>
+    <script src="{% static 'js/ajaxRequest.js' %}"></script>
 </head>
 
 <body>
