--- a/empleado/templates/eventos-detalle.html
+++ b/empleado/templates/eventos-detalle.html
@@ -1,33 +1,51 @@
 {% extends 'layouts/inicio.html' %} {% load crispy_forms_tags %} {% load static
 %} {% block content %}
-<!-- Aquí el html con la tablita y eso -->
-
 <div class="titulo text-center">
   <h1>{{evento.nombre}}</h1>
 </div>
-
-<div class="d-flex justify-content-center ">
-  {% for viatico in viaticos %}
-<table class="table table-striped text-center mx-auto tabletamanio">
-  <thead>
-    <tr>
-      <th scope="col">Fecha</th>
-      <th scope="col">Tipo</th>
-      <th scope="col">Soporte</th>
-      <th scope="col">Costo</th>
-      <th scope="col">Verificado</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>{{ viatico.fecha_gasto }}</td>
-      <td>{{ viatico.tipo_viatico }}</td>
-      <td>{{ viatico.soporte }}</td>
-      <td>{{ viatico.costo }}</td>
-      <td>{% if viatico.verificado%}✔{% else %}❌{% endif %}</td>
-    </tr>
-  </tbody>
-</table>
-{% endfor %} {% endblock content %}
+<a href="{% url 'empleado:agregarViatico' idEvento=evento.id %}">AAA</a>
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">
+  Abrir Modal
+</button>
+<div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Título del Modal</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>Contenido del modal...</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+        <button type="button" class="btn btn-primary">Guardar</button>
+      </div>
+    </div>
+  </div>
 </div>
-
+<div class="d-flex justify-content-center ">
+  <table class="table table-striped text-center mx-auto tabletamanio">
+    <thead>
+      <tr>
+        <th scope="col">Fecha</th>
+        <th scope="col">Tipo</th>
+        <th scope="col">Soporte</th>
+        <th scope="col">Costo</th>
+        <th scope="col">Verificado</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for viatico in viaticos %}
+      <tr>
+        <td>{{ viatico.fecha_gasto }}</td>
+        <td>{{ viatico.tipo_viatico }}</td>
+        <td><a href="{{ viatico.soporte.url }}">{{ viatico.soporte }}</a></td>
+        <td>{{ viatico.costo }}</td>
+        <td>{% if viatico.verificado%}✔{% else %}❌{% endif %}</td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+  {% endblock content %}
+</div>
