--- a/empleado/templates/eventos-detalle.html
+++ b/empleado/templates/eventos-detalle.html
@@ -5,6 +5,10 @@
 <div class="titulo text-center">
   <h1>{{evento.nombre}}</h1>
 </div>
+<div style="padding-left: 10%;">
+  <button class="btn btn-primary">Agregar</button>
+  <button class="btn btn-primary">Editar</button>
+</div>
 <a href="{% url 'empleado:agregarViatico' idEvento=evento.id %}">AAA</a>
 <div class="d-flex justify-content-center ">
 <table class="table table-striped text-center mx-auto tabletamanio">
@@ -29,6 +33,6 @@
     {% endfor %}
   </tbody>
 </table>
-{% endblock content %}
 </div>
+{% endblock content %}
 
