--- a/empleado/templates/eventos.html
+++ b/empleado/templates/eventos.html
@@ -2,6 +2,10 @@
 {% load crispy_forms_tags %}
 {% load static %}
 
+{% block title %}
+Inicio
+{% endblock title %}
+
 {% block content %}
 {% for evento in eventos %}
 <div class="d-flex">
