--- a/empleado/templates/layouts/inicio.html
+++ b/empleado/templates/layouts/inicio.html
@@ -3,7 +3,7 @@
 <!-- Navbar -->
 <nav class="navbar p-4 pe-5">
   <div class="container-fluid">
-    <a class="navbar-brand color-primary font-size-1" href="#">
+    <a class="navbar-brand color-primary font-size-1" href="/inicio">
       <img
         src="{% static 'images/13045f292f2a450687918591a7a1eb70 1.svg' %}"
         alt="Logo"
