--- a/gerente/templates/index.html
+++ b/gerente/templates/index.html
@@ -2,6 +2,10 @@
 {% load crispy_forms_tags %}
 {% load static %}
 
+{% block title %}
+TravelEasy
+{% endblock title %}
+
 {% block body %}
     <!-- Navbar -->
     <nav class="navbar p-4 pe-5">
