--- a/gerente/templates/login.html
+++ b/gerente/templates/login.html
@@ -2,6 +2,10 @@
 {% load crispy_forms_tags %}
 {% load static %}
 
+{% block title %}
+Inicio Sesión
+{% endblock title %}
+
 {% block body %}
 <section class="vh-100" style="background-color: #9A616D;">
   <!-- <div class="container py-5 h-100"> -->
