--- a/empleado/templates/agregar-viatico.html
+++ b/empleado/templates/agregar-viatico.html
@@ -2,6 +2,10 @@
 {% load crispy_forms_tags %}
 {% load static %}
 
+{% block title %}
+{{evento.nombre}}
+{% endblock title %}
+
 {% block content %}
 <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
