--- a/empleado/templates/eventos-detalle.html
+++ b/empleado/templates/eventos-detalle.html
@@ -1,34 +1,19 @@
-{% extends 'layouts/inicio.html' %} {% load crispy_forms_tags %} {% load static
-%} {% block content %}
+{% extends 'layouts/inicio.html' %} 
+{% load static %} 
+
+{% block title %}
+{{evento.nombre}}
+{% endblock title %}
+  
+
+{% block content %}
 <div class="titulo text-center">
   <h1>{{evento.nombre}}</h1>
 </div>
 <div style="padding-left: 10%;">
-  <button class="btn btn-primary">Agregar</button>
-  <button class="btn btn-primary">Editar</button>
+  <a href="{% url 'empleado:agregarViatico' idEvento=evento.id %}" class="btn btn-primary">Agregar</a>
 </div>
-<a href="{% url 'empleado:agregarViatico' idEvento=evento.id %}">AAA</a>
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">
-  Abrir Modal
-</button>
-<div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Título del Modal</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <p>Contenido del modal...</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-        <button type="button" class="btn btn-primary">Guardar</button>
-      </div>
-    </div>
-  </div>
 
-</div>
 <div class="d-flex justify-content-center ">
   <table class="table table-striped text-center mx-auto tabletamanio">
     <thead>
@@ -52,5 +37,5 @@
       {% endfor %}
     </tbody>
   </table>
-  {% endblock content %}
 </div>
+{% endblock content %}
