--- a/gerente/templates/login.html
+++ b/gerente/templates/login.html
@@ -7,7 +7,7 @@ Inicio Sesión
 {% endblock title %}
 
 {% block body %}
-<section class="vh-100" style="background-color: #9A616D;">
+<section class="vh-100" style="background-color: #9ed3f3;">
   <!-- <div class="container py-5 h-100"> -->
     <div class="container w-75 py-5 h-100 rounded shadow">
 
@@ -42,11 +42,11 @@ Inicio Sesión
                   {{form|crispy}}
 
                   <div class="pt-1 mb-4">
-                    <input type="submit" value="Iniciar sesión"
-                                            class="btn btn-dark btn-lg btn-block">
+                    <input type="submit" value="Iniciar sesión" class="btn btn-primary btn-lg btn-block">
+                    <br>
+                    <a class="color-primary text-decoration-none font-size-2" href="{% url 'empleado:registro' %}">¿No tienes cuenta? Registrate ahora!</a>
                   </div>
-                </form>
-
+                </form> 
               </div>
             </div>
           </div>
